--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-javascript": "^6.2.3",
     "@codemirror/lang-python": "^6.1.7",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@uiw/codemirror-theme-material": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
     "axios": "^1.8.3",
